Bug 364784 - Amazon search (or updating entry with Amazon-source) does not work
Summary: Amazon search (or updating entry with Amazon-source) does not work
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
: 381615 383447 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-26 17:35 UTC by kde-bugs
Modified: 2017-08-13 11:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde-bugs 2016-06-26 17:35:38 UTC
Updating an entry with Amazon(US) as data-source no longer works.
I have my personal Access and Secret key (entered into 'Settings'->'Configure Tellico'->'data-sources'
Associate-ID=tellico-20 (changing this to my personal AWS-ID does not work either)
Updating an entry (only ISBN-nr entered and using update to complete) or using search with Amazon Web Services as data source no longer returns a result.
This is the return I got from AWS (using wireshark):
<ItemSearchErrorResponse><Error><Code>AWS.InvalidAssociate</Code><Message>Your <my personal Access Key> is not registered as an Amazon Associate. Please register as an associate at https://affiliate-program.amazon.com/gp/associates/join/landing/main.html.</Message></Error><RequestId>f3c2c9d6-d721-4137-a1b5-9bb970ab7211</RequestId></ItemSearchErrorResponse>

Reproducible: Always

Steps to Reproduce:
1. search source: Amazon(US)
2. Select 'Title'
3. Search Query: "Steve Jobs"

Actual Results:  
The search returned no items.


Ubuntu: 16.04
Tellico: 2.3.9
KDE: 4.14.16
Comment 1 Robby Stephenson 2017-03-18 00:56:34 UTC
Is this problem persisting? I'm not aware that Amazon has separated API access from Associate accounts. Have you tried completing that link as an Amazon Associate? It's possible that Amazon has changed access rules.
Comment 2 Robby Stephenson 2017-07-08 01:30:34 UTC
*** Bug 381615 has been marked as a duplicate of this bug. ***
Comment 3 Robby Stephenson 2017-07-08 01:30:37 UTC
Git commit 46b4c82facd89b16f7970d291e0d9da5953c580f by Robby Stephenson.
Committed on 08/07/2017 at 01:26.
Pushed by rstephenson into branch 'master'.

Show dialog box for Amazon Associate error

Amazon has changed the terms of use for their API, requiring an
Associate account for searching with the API.
FIXED-IN: 3.1

M  +5    -1    ChangeLog
M  +9    -0    src/fetch/amazonfetcher.cpp

https://commits.kde.org/tellico/46b4c82facd89b16f7970d291e0d9da5953c580f
Comment 4 Robby Stephenson 2017-07-08 01:34:15 UTC
Also see https://forums.aws.amazon.com/ann.jspa?annID=4737
Comment 5 Robby Stephenson 2017-08-13 11:55:13 UTC
*** Bug 383447 has been marked as a duplicate of this bug. ***