Show dialog box for Amazon Associate error

Amazon has changed the terms of use for their API, requiring an
Associate account for searching with the API.

BUG: 364784
FIXED-IN: 3.1